add light ambient specular diffuse setting

--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
           <tr class="blu"><th>B</th><td><input id="lightColorAmbient-blu" class="short" onchange="setRGB('lightColorAmbient', null, null, this.value)" /></td></tr>
         </table>
       </div>
-      <div class="panel lightDiffuse">
-        <button id="lightDiffuse-button">diffse light color</button>
+      <div class="panel lightColorDiffuse">
+        <button id="lightColorDiffuse-button">diffse light color</button>
         <table>
-          <tr><th>RGB</th><td><input id="lightDiffuse-rgb" onchange="setString('lightDiffuse', this.value)" /></td></tr>
-          <tr><th>HEX</th><td><input id="lightDiffuse-hex" onchange="setString('lightDiffuse', this.value)" /></td></tr>
-          <tr class="red"><th>R</th><td><input id="lightDiffuse-red" class="short" onchange="setRGB('lightDiffuse', this.value, null, null)" /></td></tr>
-          <tr class="grn"><th>G</th><td><input id="lightDiffuse-grn" class="short" onchange="setRGB('lightDiffuse', null, this.value, null)" /></td></tr>
-          <tr class="blu"><th>B</th><td><input id="lightDiffuse-blu" class="short" onchange="setRGB('lightDiffuse', null, null, this.value)" /></td></tr>
+          <tr><th>RGB</th><td><input id="lightColorDiffuse-rgb" onchange="setString('lightColorDiffuse', this.value)" /></td></tr>
+          <tr><th>HEX</th><td><input id="lightColorDiffuse-hex" onchange="setString('lightColorDiffuse', this.value)" /></td></tr>
+          <tr class="red"><th>R</th><td><input id="lightColorDiffuse-red" class="short" onchange="setRGB('lightColorDiffuse', this.value, null, null)" /></td></tr>
+          <tr class="grn"><th>G</th><td><input id="lightColorDiffuse-grn" class="short" onchange="setRGB('lightColorDiffuse', null, this.value, null)" /></td></tr>
+          <tr class="blu"><th>B</th><td><input id="lightColorDiffuse-blu" class="short" onchange="setRGB('lightColorDiffuse', null, null, this.value)" /></td></tr>
         </table>
       </div>
-      <div class="panel lightSpecular">
-        <button id="lightSpecular-button">diffse light color</button>
+      <div class="panel lightColorSpecular">
+        <button id="lightColorSpecular-button">Specular light color</button>
         <table>
-          <tr><th>RGB</th><td><input id="lightSpecular-rgb" onchange="setString('lightSpecular', this.value)" /></td></tr>
-          <tr><th>HEX</th><td><input id="lightSpecular-hex" onchange="setString('lightSpecular', this.value)" /></td></tr>
-          <tr class="red"><th>R</th><td><input id="lightSpecular-red" class="short" onchange="setRGB('lightSpecular', this.value, null, null)" /></td></tr>
-          <tr class="grn"><th>G</th><td><input id="lightSpecular-grn" class="short" onchange="setRGB('lightSpecular', null, this.value, null)" /></td></tr>
-          <tr class="blu"><th>B</th><td><input id="lightSpecular-blu" class="short" onchange="setRGB('lightSpecular', null, null, this.value)" /></td></tr>
+          <tr><th>RGB</th><td><input id="lightColorSpecular-rgb" onchange="setString('lightColorSpecular', this.value)" /></td></tr>
+          <tr><th>HEX</th><td><input id="lightColorSpecular-hex" onchange="setString('lightColorSpecular', this.value)" /></td></tr>
+          <tr class="red"><th>R</th><td><input id="lightColorSpecular-red" class="short" onchange="setRGB('lightColorSpecular', this.value, null, null)" /></td></tr>
+          <tr class="grn"><th>G</th><td><input id="lightColorSpecular-grn" class="short" onchange="setRGB('lightColorSpecular', null, this.value, null)" /></td></tr>
+          <tr class="blu"><th>B</th><td><input id="lightColorSpecular-blu" class="short" onchange="setRGB('lightColorSpecular', null, null, this.value)" /></td></tr>
         </table>
       </div>
     </div>
