add scale function

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                   <div class="item" data-value="galvanizedTexture.jpg">galvanizedTexture</div>
                   <div class="item" data-value="moon.gif">moon</div>
                   <div class="item" data-value="red.jpg">red</div>
+                  <div class="item" data-value="frontcolor">Item Front Color</div>
                 </div>
               </div>
             </div>
