edit the shading select

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
                 <div class="item" data-value="pot.tri">teapot (with color)</div>
               </div>
             </div>
+            <div class="ui dropdown" style="position: relative;">
+              <input type="hidden" value="flat-" id="shading1">
+              <i class="dropdown icon"></i>
+              <div class="default text">select #1 shading</div>
+              <div class="menu">
+                <div class="item" data-value="flat-">flat</div>
+                <div class="item" data-value="gouraud-">gouraud</div>
+                <div class="item" data-value="phong-">phong</div>
+              </div>
+            </div>
           </div>
           <div class="ui segment">
             <div class="ui checkbox object">
@@ -71,6 +81,16 @@
                 <div class="item" data-value="pot.tri">teapot (with color)</div>
               </div>
             </div>
+            <div class="ui dropdown" style="position: relative;">
+              <input type="hidden" value="gouraud-" id="shading2">
+              <i class="dropdown icon"></i>
+              <div class="default text">select #1 shading</div>
+              <div class="menu">
+                <div class="item" data-value="flat-">flat</div>
+                <div class="item" data-value="gouraud-">gouraud</div>
+                <div class="item" data-value="phong-">phong</div>
+              </div>
+            </div>
           </div>
           <div class="ui segment">
             <div class="ui checkbox object">
@@ -89,6 +109,16 @@
                 <div class="item" data-value="kangaroo.tri">Kangaroo</div>
                 <div class="item" data-value="easter.tri">Easter</div>
                 <div class="item" data-value="pot.tri">teapot (with color)</div>
+              </div>
+            </div>
+            <div class="ui dropdown" style="position: relative;">
+              <input type="hidden" value="phong-" id="shading3">
+              <i class="dropdown icon"></i>
+              <div class="default text">select #3 shading</div>
+              <div class="menu">
+                <div class="item" data-value="flat-">flat</div>
+                <div class="item" data-value="gouraud-">gouraud</div>
+                <div class="item" data-value="phong-">phong</div>
               </div>
             </div>
           </div>
